After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708547 - search provider crashes: gnome-contacts-3.9.90-1.fc20: gdk_window_create_similar_image_surface: Process /usr/libexec/gnome-contacts-search-provider was killed by signal 11 (SIGSEGV)
search provider crashes: gnome-contacts-3.9.90-1.fc20: gdk_window_create_simi...
Status: RESOLVED FIXED
Product: gnome-contacts
Classification: Core
Component: general
3.9.x
Other Linux
: Normal critical
: ---
Assigned To: GNOME Contacts maintainer(s)
GNOME Contacts maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-09-21 19:20 UTC by Igor Gnatenko
Modified: 2013-10-08 01:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch migrating from GLib.Appliaction to Gtk.Application (981 bytes, patch)
2013-09-23 15:09 UTC, Erick Perez Castellanos
needs-work Details | Review

Description Igor Gnatenko 2013-09-21 19:20:24 UTC
More trace: https://bugzilla.redhat.com/show_bug.cgi?id=1004367

(gdb) bt
  • #0 gdk_window_create_similar_image_surface
    at gdkwindow.c line 9337
  • #1 gdk_cairo_surface_create_from_pixbuf
    at gdkcairo.c line 212
  • #2 gdk_cairo_set_source_pixbuf
    at gdkcairo.c line 302
  • #3 contacts_contact_frame_icon
    at contacts-contact.c line 4756
  • #4 contacts_contact_get_small_avatar
    at contacts-contact.c line 8344
  • #5 contacts_contact_get_avatar_icon_data
    at contacts-contact.c line 8464
  • #6 contacts_search_provider_GetResultMetas
    at contacts-shell-search-provider.c line 767
  • #7 _dbus_contacts_search_provider_GetResultMetas
    at contacts-shell-search-provider.c line 1145
  • #8 contacts_search_provider_dbus_interface_method_call
    at contacts-shell-search-provider.c line 1212
  • #9 call_in_idle_cb
    at gdbusconnection.c line 4868
  • #10 g_main_dispatch
    at gmain.c line 3065
  • #11 g_main_context_dispatch
    at gmain.c line 3641
  • #12 g_main_context_iterate
    at gmain.c line 3712
  • #13 g_main_context_iteration
    at gmain.c line 3773
  • #14 g_application_run
    at gapplication.c line 1635
  • #15 _vala_main
    at contacts-shell-search-provider.c line 1373
  • #16 __libc_start_main
    at libc-start.c line 269
  • #17 _start

So..

(gdb) p window
$8 = (GdkWindow *) 0x0

(gdb) p contacts_contact_get_small_avatar::self->priv->_small_avatar 
$5 = (GdkPixbuf *) 0x0

(gdb) p contacts_contact_get_avatar_icon_data::self->priv 
$3 = (ContactsContactPrivate *) 0xb43060

at break on contacts-contact.c:8344
(gdb) p self->priv->_small_avatar 
$7 = (GdkPixbuf *) 0x0

I think it's bad process people w/ avatars..
Comment 1 Erick Perez Castellanos 2013-09-23 15:09:44 UTC
Created attachment 255578 [details] [review]
Patch migrating from GLib.Appliaction to Gtk.Application
Comment 2 Erick Perez Castellanos 2013-09-23 15:16:32 UTC
(In reply to comment #0)
> More trace: https://bugzilla.redhat.com/show_bug.cgi?id=1004367
> 
> (gdb) bt
> 

Could you try the attached patch and see if the problem remains ?
Comment 3 Igor Gnatenko 2013-09-23 15:25:16 UTC
(In reply to comment #2)
> (In reply to comment #0)
> > More trace: https://bugzilla.redhat.com/show_bug.cgi?id=1004367
> > 
> > (gdb) bt
> > 
> 
> Could you try the attached patch and see if the problem remains ?

Sure, I can. But I don't know how to compile vala to C..
Comment 4 Igor Gnatenko 2013-09-23 16:13:44 UTC
Review of attachment 255578 [details] [review]:

Yup. This patch fixes my problem. Thanks.
I think more better to re-send patch w/:
* Fix From: =?UTF-8?q?Erick=20P=C3=A9rez=20Castellanos?= <erick.red@gmail.com>
* Add Tested-by: Igor Gnatenko <i.gnatenko.brain@gmail.com>
Comment 5 Erick Perez Castellanos 2013-09-23 17:27:51 UTC
Fixed in master.

Pushed here: https://git.gnome.org/browse/gnome-contacts/commit/?id=0e11ea486dcc1182c72632524edff679d4c46e8a
Comment 6 Igor Gnatenko 2013-09-23 17:58:15 UTC
(In reply to comment #5)
> Fixed in master.
> 
> Pushed here:
> https://git.gnome.org/browse/gnome-contacts/commit/?id=0e11ea486dcc1182c72632524edff679d4c46e8a
Many thanks to you :)
Comment 7 Sunjin Yang 2013-10-07 05:45:22 UTC
Could you apply GTK+ patches to 3.10 branch?

1959e36066908327aa8bfcb8112e31bed2986b5c gdkcairo: Split out a function
b41787bc788d03aaf3dc3c734bc7e8161c1e713a gdkcairo: Don't require gtk_init() for set_source_pixbuf()
3d7e0f3eb1b64ae457a99b26fc8b833bdd621fb0 gdkcairo: Actually paint the pixbuf

My Clutter-based application uses gdk_cairo_set_source_pixbuf() and crashes on the same context.
Comment 8 Erick Perez Castellanos 2013-10-07 12:59:55 UTC
(In reply to comment #7)
> Could you apply GTK+ patches to 3.10 branch?
> 
> 1959e36066908327aa8bfcb8112e31bed2986b5c gdkcairo: Split out a function
> b41787bc788d03aaf3dc3c734bc7e8161c1e713a gdkcairo: Don't require gtk_init() for
> set_source_pixbuf()
> 3d7e0f3eb1b64ae457a99b26fc8b833bdd621fb0 gdkcairo: Actually paint the pixbuf
> 
> My Clutter-based application uses gdk_cairo_set_source_pixbuf() and crashes on
> the same context.

What does gnome-contacts has to do with your Clutter-based application ?
Comment 9 Sunjin Yang 2013-10-07 14:08:03 UTC
(In reply to comment #8)
> (In reply to comment #7)
> > Could you apply GTK+ patches to 3.10 branch?
> > 
> > 1959e36066908327aa8bfcb8112e31bed2986b5c gdkcairo: Split out a function
> > b41787bc788d03aaf3dc3c734bc7e8161c1e713a gdkcairo: Don't require gtk_init() for
> > set_source_pixbuf()
> > 3d7e0f3eb1b64ae457a99b26fc8b833bdd621fb0 gdkcairo: Actually paint the pixbuf
> > 
> > My Clutter-based application uses gdk_cairo_set_source_pixbuf() and crashes on
> > the same context.
> 
> What does gnome-contacts has to do with your Clutter-based application ?

Because the commit(b41787bc788d03aaf3dc3c734bc7e8161c1e713a) log message refers to this bug entry.

Should I file this as a new bug for GTK+?
Comment 10 Erick Perez Castellanos 2013-10-07 15:03:06 UTC
Yes, you should. This is not a gnome-contacts issue. You issue actually could be more complex since you're not only using Gtk+ but clutter as well.
Comment 11 Sunjin Yang 2013-10-08 01:08:29 UTC
(In reply to comment #10)
> Yes, you should. This is not a gnome-contacts issue. You issue actually could
> be more complex since you're not only using Gtk+ but clutter as well.

OK, I opened a new bug:

  https://bugzilla.gnome.org/show_bug.cgi?id=709602

Thanks you for reply.