gdkcairo: Don't require gtk_init() for set_source_pixbuf()

Instead of using the default display's root window's surface, use the
target surface of the passed in cairo_t to create the similar image from.

https://bugzilla.gnome.org/show_bug.cgi?id=708547